--- a/LLM_App_with_LangChain.ipynb
+++ b/LLM_App_with_LangChain.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/otQW3Qg67CDQ6fO/9Aev",
+      "authorship_tag": "ABX9TyNrni951cVToMlCQfypIZ23",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,79 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "#🔐 Data Safety Project 🔐\n",
+        "\n",
+        "Summary:\n",
+        "The EU has regulations around GDPR (data privacy and data protection). Imposes strict rules on controlling and processing personally identifiable information.\n",
+        "\n",
+        "I'll make an LLM AI model to learn the content of the GDPR document so I can ask questions about the document.\n",
+        "\n",
+        "I will create an LLM-powered application with LangChain, Pinecone, OpenAI and Python."
+      ],
       "metadata": {
         "id": "QZLfgubKOdbz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🏦"
+      ],
+      "metadata": {
+        "id": "FqFkzKZgREY-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install openai\n",
+        "langchain\n",
+        "pinecone-client\n",
+        "python-dotenv\n",
+        "tiktoken"
+      ],
+      "metadata": {
+        "id": "ih1M5W2cRD0Z",
+        "outputId": "85feb1cf-ad4b-4bc4-ecc0-2558971bee97",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: openai in /usr/local/lib/python3.11/dist-packages (1.59.6)\n",
+            "Requirement already satisfied: anyio<5,>=3.5.0 in /usr/local/lib/python3.11/dist-packages (from openai) (3.7.1)\n",
+            "Requirement already satisfied: distro<2,>=1.7.0 in /usr/local/lib/python3.11/dist-packages (from openai) (1.9.0)\n",
+            "Requirement already satisfied: httpx<1,>=0.23.0 in /usr/local/lib/python3.11/dist-packages (from openai) (0.28.1)\n",
+            "Requirement already satisfied: jiter<1,>=0.4.0 in /usr/local/lib/python3.11/dist-packages (from openai) (0.8.2)\n",
+            "Requirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.11/dist-packages (from openai) (2.10.5)\n",
+            "Requirement already satisfied: sniffio in /usr/local/lib/python3.11/dist-packages (from openai) (1.3.1)\n",
+            "Requirement already satisfied: tqdm>4 in /usr/local/lib/python3.11/dist-packages (from openai) (4.67.1)\n",
+            "Requirement already satisfied: typing-extensions<5,>=4.11 in /usr/local/lib/python3.11/dist-packages (from openai) (4.12.2)\n",
+            "Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.11/dist-packages (from anyio<5,>=3.5.0->openai) (3.10)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.11/dist-packages (from httpx<1,>=0.23.0->openai) (2024.12.14)\n",
+            "Requirement already satisfied: httpcore==1.* in /usr/local/lib/python3.11/dist-packages (from httpx<1,>=0.23.0->openai) (1.0.7)\n",
+            "Requirement already satisfied: h11<0.15,>=0.13 in /usr/local/lib/python3.11/dist-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
+            "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.11/dist-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
+            "Requirement already satisfied: pydantic-core==2.27.2 in /usr/local/lib/python3.11/dist-packages (from pydantic<3,>=1.9.0->openai) (2.27.2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2-yGuxiGVCbw"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
